# llm-api-audit

./: LICENSE  README.md
benchmark/: resample_mmlu.py  run_benchmarks.sh
benchmark/lm-evaluation-harness/lm_eval/models/: huggingface.py  vllm_causallms.py
classifier/: classify.sh  generate_responses.py  run_all.sh
identity_prompting/: count_names.ipynb  run_generation.py  run_generation.sh
logprobs/: run_logprobs.py
model_equality_testing/: download.py  mixed.py  mixed.sh
model_equality_testing/experiments/: prompts.py  utils.py
model_equality_testing/experiments/cache/samples/: neuralmagic-Meta-Llama-3-70B-Instruct-FP8-humaneval-nf4-temp=1.0-L=250-0.pkl  neuralmagic-Meta-Llama-3-70B-Instruct-FP8-humaneval-nf4-temp=1.0-L=250-1.pkl  neuralmagic-Meta-Llama-3-70B-Instruct-FP8-humaneval-nf4-temp=1.0-L=250-10.pkl  (+393 more)
model_equality_testing/experiments/constants/: minimum_prompt_indices.json  vanilla_api.json  vanilla_local.json
model_equality_testing/experiments/sampling/: api.py  cache_api_samples.py  cache_local_samples.py  cache_local_samples_vllm.py  cache_logprobs.py  model.py  sample.sh  test_api_tokenization.py
model_equality_testing/experiments/testing/: bootstrap_manager.py  cache_one_sample_bootstrap.py  cache_two_sample_bootstrap.py  simulate_one_sample_power.py  simulate_two_sample_power.py  simulate_two_sample_power_composite.py  simulation.py
model_equality_testing/model_equality_testing/: pyproject.toml
model_equality_testing/model_equality_testing/src/: __init__.py  algorithm.py  dataset.py  distribution.py  pvalue.py  tests.py  utils.py
(+51 files in other folders)
